# robot_script

./: CMakeLists.txt  README.md  package.xml
include/robot_script/: controller.hpp  main.hpp  network_controller.hpp  network_policy.hpp  phase_controller.hpp  solo8.hpp
src/: calibrate.cpp  main.cpp  network_controller.cpp  network_policy.cpp  phase_controller.cpp  solo8.cpp  test_master_board.cpp  test_torch.cpp
srcpy/: convert_torchscript_model.py
